[gd_scene load_steps=23 format=3 uid="uid://bjxikdxrndls"]

[ext_resource type="Texture2D" uid="uid://dikf5a8h2q6uu" path="res://addons/kenney_prototype_textures/orange/texture_01.png" id="1_s8645"]
[ext_resource type="Script" path="res://scenes/ship/ship.gd" id="1_vpity"]
[ext_resource type="Script" path="res://scenes/ship/piston_component.gd" id="3_ln05w"]
[ext_resource type="Texture2D" uid="uid://cdupdty3m1x67" path="res://addons/kenney_prototype_textures/red/texture_01.png" id="3_xarph"]
[ext_resource type="Script" path="res://scenes/components/hitbox_component.gd" id="5_mmi3y"]
[ext_resource type="Texture2D" uid="uid://dgxt0p2qehqv5" path="res://addons/kenney_prototype_textures/green/texture_01.png" id="6_a6aos"]
[ext_resource type="Script" path="res://scenes/ship/steering_wheel.gd" id="6_xnqwm"]
[ext_resource type="PackedScene" uid="uid://dg2lh07mitpxh" path="res://scenes/components/hitbox_component.tscn" id="8_m8egb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qwfyk"]
size = Vector3(8.81317, 1.06689, 14.452)

[sub_resource type="BoxShape3D" id="BoxShape3D_m2uqv"]
size = Vector3(5.11607, 1.06689, 14.452)

[sub_resource type="BoxShape3D" id="BoxShape3D_7a05m"]
size = Vector3(5.59188, 0.320129, 7.34251)

[sub_resource type="BoxShape3D" id="BoxShape3D_4v1pb"]
size = Vector3(0.139934, 3.75913, 7.34251)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3fulu"]
albedo_texture = ExtResource("1_s8645")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ix4pt"]
albedo_texture = ExtResource("3_xarph")

[sub_resource type="BoxShape3D" id="BoxShape3D_t6mur"]
size = Vector3(1, 2.69635, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2h8uf"]
albedo_texture = ExtResource("6_a6aos")
uv1_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_euhuv"]
size = Vector3(1.99149, 1.99652, 0.651596)

[sub_resource type="BoxShape3D" id="BoxShape3D_yss1o"]
size = Vector3(1.50439, 2.27551, 1.76123)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3fj8h"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3ovcn"]
properties/0/path = NodePath(".:target_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:target_rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_vc7is"]
size = Vector3(9.68854, 3.16309, 14.5098)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_usmpv"]
height = 1.33265
radius = 2.06526

[node name="SHIP" type="RigidBody3D"]
collision_layer = 2
collision_mask = 6
script = ExtResource("1_vpity")

[node name="ProbeContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.08507)

[node name="Marker3D" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.90328, 0, -4.15632)

[node name="Marker3D2" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.903, 0, -4.156)

[node name="Marker3D3" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.90328, 0, 0.15885)

[node name="Marker3D4" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.903, 0, 0.159171)

[node name="Marker3D5" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.90328, 0, 4.13407)

[node name="Marker3D6" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.903, 0, 4.13439)

[node name="Marker3D7" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.90328, 0, 7.08273)

[node name="Marker3D8" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.903, 0, 7.08305)

[node name="Marker3D9" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.90328, 0, 10.0868)

[node name="Marker3D10" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.903, 0, 10.0871)

[node name="Marker3D11" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.90328, 0, 10.0868)

[node name="Marker3D12" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.903, 0, 10.0871)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0302429, 2.07443, -0.0749966)
shape = SubResource("BoxShape3D_qwfyk")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(0.71719, -0.696877, 0, 0.696877, 0.71719, 0, 0, 0, 1, 2.16531, -0.0872762, -0.0749966)
shape = SubResource("BoxShape3D_m2uqv")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="."]
transform = Transform3D(-0.741109, -0.671384, 0, 0.671384, -0.741109, 0, 0, 0, 1, -2.21807, -0.0872762, -0.0749966)
shape = SubResource("BoxShape3D_m2uqv")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0624347, 6.19697, -0.0212101)
shape = SubResource("BoxShape3D_7a05m")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.78841, 4.47747, -0.0212101)
shape = SubResource("BoxShape3D_4v1pb")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.6512, 4.47747, -0.0212101)
shape = SubResource("BoxShape3D_4v1pb")

[node name="CSG" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.08507)

[node name="CSGBox3D" type="CSGBox3D" parent="CSG"]
transform = Transform3D(0.724954, 0.688798, 0, -0.688798, 0.724954, 0, 0, 0, 1, -2.2, 0, 3.0344)
size = Vector3(5.14636, 1, 14.3785)
material = SubResource("StandardMaterial3D_3fulu")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSG"]
transform = Transform3D(0.725374, -0.688355, 0, 0.688355, 0.725374, 0, 0, 0, 1, 2.2, 0, 3.00394)
size = Vector3(5.14636, 1, 14.3176)
material = SubResource("StandardMaterial3D_3fulu")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0106047, 2.09876, 3.02737)
size = Vector3(8.78781, 1, 14.3945)
material = SubResource("StandardMaterial3D_3fulu")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0716974, 4.47433, 3.07262)
size = Vector3(5.60601, 3.75964, 7.34808)
material = SubResource("StandardMaterial3D_3fulu")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSG/CSGBox3D4"]
transform = Transform3D(0.943997, 0, 0, 0, 0.943997, 0, 0, 0, 0.943997, 0, -0.207561, -0.213882)
operation = 2
size = Vector3(5.60601, 3.75964, 8.38182)
material = SubResource("StandardMaterial3D_3fulu")

[node name="Components" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.08507)

[node name="piston" type="Node3D" parent="Components" node_paths=PackedStringArray("ship")]
script = ExtResource("3_ln05w")
ship = NodePath("../..")

[node name="CSGBox3D6" type="CSGBox3D" parent="Components/piston"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.34082, 3.14076, 1.86441)
size = Vector3(0.398987, 1.33203, 0.289124)
material = SubResource("StandardMaterial3D_ix4pt")

[node name="Hitbox" type="Area3D" parent="Components/piston" node_paths=PackedStringArray("Usable_Object")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.473711, 1.77819, 1.04917)
collision_layer = 8
collision_mask = 0
script = ExtResource("5_mmi3y")
Usable_Object = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Components/piston/Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.91542, 0.848175, 0.694769)
shape = SubResource("BoxShape3D_t6mur")

[node name="steering wheel" type="Node3D" parent="Components" node_paths=PackedStringArray("ship", "shturval_mesh")]
script = ExtResource("6_xnqwm")
ship = NodePath("../..")
shturval_mesh = NodePath("CSGBox3D5/CSGTorus3D")

[node name="CSGBox3D5" type="CSGBox3D" parent="Components/steering wheel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.142668, 3.41908, 1.86441)
size = Vector3(0.398987, 1.88867, 0.289124)

[node name="CSGTorus3D" type="CSGTorus3D" parent="Components/steering wheel/CSGBox3D5"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0.418378, 0.217818)
material = SubResource("StandardMaterial3D_2h8uf")

[node name="Hitbox" parent="Components/steering wheel" node_paths=PackedStringArray("Usable_Object") instance=ExtResource("8_m8egb")]
have_rpc = true
Usable_Object = NodePath("..")
have_sender_with_rpc = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Components/steering wheel/Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.159629, 3.85854, 2.23792)
shape = SubResource("BoxShape3D_euhuv")

[node name="Camera3D" type="Camera3D" parent="Components/steering wheel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.160329, 5.18002, 3.03697)

[node name="shturval_collision" type="Area3D" parent="Components/steering wheel"]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Components/steering wheel/shturval_collision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.137451, 3.60451, 2.88655)
shape = SubResource("BoxShape3D_yss1o")

[node name="CSGBox3D" type="CSGBox3D" parent="Components/steering wheel/shturval_collision/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0190353, 0.0821838, -0.192139)
transparency = 0.52
size = Vector3(1.53789, 2.22015, 1.38428)
material = SubResource("StandardMaterial3D_3fj8h")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3ovcn")

[node name="Apply vel player" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.08507)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Apply vel player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0801086, 3.64025, 3.38599)
shape = SubResource("BoxShape3D_vc7is")

[node name="EnterHoldArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 17.5068)

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnterHoldArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.205427)
shape = SubResource("CylinderShape3D_usmpv")

[connection signal="area_entered" from="Components/steering wheel/shturval_collision" to="Components/steering wheel" method="_on_shturval_collision_area_entered"]
[connection signal="area_exited" from="Components/steering wheel/shturval_collision" to="Components/steering wheel" method="_on_shturval_collision_area_exited"]
[connection signal="area_entered" from="Apply vel player" to="." method="_on_apply_vel_player_area_entered"]
[connection signal="area_exited" from="Apply vel player" to="Components/steering wheel" method="_on_apply_vel_player_area_exited"]
